--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   side_navigation: ^1.0.4
   http: ^1.2.1
+  file_picker: ^8.0.0+1
+  excel: ^4.0.3
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
