--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.1.3
   bloc: ^8.1.4
   flutter_bloc: ^8.1.5
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
