--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,9 @@ dependencies:
   shared_preferences: ^2.2.3
   provider: ^6.1.2
   intl: ^0.19.0
+  archive: ^3.6.1
 
+  path: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
